# TheRealUpstateNY

./: .gitignore  README.md  adjacencies.json  new_york_state.geo  pyproject.toml  upstate.py  upstate.sh
